--- a/charts/redis-ha/templates/redis-ha-secret.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret.yaml
@@ -1,4 +1,4 @@
-{{- if not (tpl (.Values.restore.existingSecret | default "" ) . ) }}
+{{- if not .Values.restore.existingSecret }}
 
 
 {{- $regexRestoreS3 := "^s3://.+|^S3://.+" -}}
