--- a/charts/redis-ha/templates/redis-auth-secret.yaml
+++ b/charts/redis-ha/templates/redis-auth-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.auth (not .Values.existingSecret) -}}
+{{- if and .Values.auth (not (tpl (.Values.existingSecret | default "" ) . )) -}}
 {{ $fullAnnotations := mustMerge .Values.redis.annotations .Values.authSecretAnnotations }}
 apiVersion: v1
 kind: Secret
