--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -103,6 +103,7 @@ haproxy:
     # -- If "true" this will enable TLS termination on haproxy
     enabled: false
     # -- Secret containing the .pem file
+    # Supports templates like "{{ .Release.Name }}-haproxy-tls"
     secretName: ""
     # -- Key file name
     keyName:
@@ -375,6 +376,10 @@ redis:
   # - secretRef:
   #     name: add-env-secret
 
+  # -- Configure the 'minReadySeconds' parameter to StatefulSet
+  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#minreadyseconds
+  minReadySeconds: 0
+
   ## Configures redis with tls-port parameter
   # -- (int) TLS Port to access the redis service
   tlsPort: ~
@@ -529,6 +534,7 @@ sentinel:
 
   # -- An existing secret containing a key defined by `sentinel.authKey` that configures `requirepass`
   # in the conf parameters (Requires `sentinel.auth: enabled`, cannot be used in conjunction with `.Values.sentinel.password`)
+  # Supports templates like "{{ .Release.Name }}-sentinel-creds"
   existingSecret: ""
 
   ## Defines the key holding the sentinel password in existing secret.
@@ -852,6 +858,7 @@ authSecretAnnotations: {}
 
 ## Use existing secret containing key `authKey` (ignores redisPassword)
 ## Can also store AWS S3 or SSH secrets in this secret
+## Supports templates like "{{ .Release.Name }}-creds"
 # -- An existing secret containing a key defined by `authKey` that configures `requirepass` and `masterauth` in the conf
 # parameters (Requires `auth: enabled`, cannot be used in conjunction with `.Values.redisPassword`)
 existingSecret: ~
@@ -905,7 +912,8 @@ emptyDir: {}
 tls:
   ## Fill the name of secret if you want to use your own TLS certificates.
   ## The secret should contains keys named by "tls.certFile" - the certificate, "tls.keyFile" - the private key, "tls.caCertFile" - the certificate of CA and "tls.dhParamsFile" - the dh parameter file
-  ## These secret will be genrated using files from certs folder if the secretName is not set and redis.tlsPort is set
+  ## Supports templates like "{{ .Release.Name }}-tls"
+  ## This secret will be generated using files from certs folder if the secretName is not set and redis.tlsPort is set
   # secretName: tls-secret
 
   # -- Name of certificate file
