Fix template scope for ingressRules

--- a/charts/redis-ha/templates/redis-ha-network-policy.yaml
+++ b/charts/redis-ha/templates/redis-ha-network-policy.yaml
@@ -62,7 +62,7 @@ spec:
 {{- if $rule.ports }}
 {{ toYaml $rule.ports | indent 7 }}
 {{- else }}
-      {{- include "redis-ports" . | nindent 6 }}
+      {{- include "redis-ports" $root | nindent 6 }}
 {{- end }}
 {{- end }}
 {{- end }}
