Add haproxy timeout tunnel setting
Signed-off-by: Morten Larsen <mortenl41@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -239,6 +239,8 @@ haproxy:
     client: 330s
     # -- haproxy.cfg `timeout check` setting
     check: 2s
+    # -- haproxy.cfg `timeout tunnel` setting
+    tunnel: ""
   # -- haproxy.cfg `check inter` setting
   checkInterval: 1s
   # -- haproxy.cfg `check fall` setting
