add sentinel announce-hosts and resolve-hosts
Signed-off-by: Alex <alex.s@akeyless.io>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -532,6 +532,14 @@ sentinel:
   password: ~
   # password: password
 
+  # -- (bool) Configures sentinel with resolve-hostnames parameter, if true sets "resolve-hostnames yes" in sentinel.conf
+  resolveHostnames: ~
+  # resolveHostnames: true
+
+  # -- (bool) Configures sentinel with announce-hostnames parameter, if true sets "announce-hostnames yes" in sentinel.conf
+  announceHostnames: ~
+  # announceHostnames: true
+
   # -- An existing secret containing a key defined by `sentinel.authKey` that configures `requirepass`
   # in the conf parameters (Requires `sentinel.auth: enabled`, cannot be used in conjunction with `.Values.sentinel.password`)
   # Supports templates like "{{ .Release.Name }}-sentinel-creds"
